syntax = "proto3";
package services;
option go_package = "proto;servicespb";

message Product {
  string name = 1;
  string desc = 2;
  double price = 3;
}

message Notification {
  string name = 1;
  double price = 2;
}

message CreateProductRequest {
  string name = 1;
  string desc = 2;
  double price = 3;
}
message CreateProductResponse { string result = 1; }

message PageRequest { int32 page = 1; int32 limit = 2;}
message PageResponse { repeated Product product = 1; }

message ChangePriceRequest {
  string name = 1;
  double price = 2;
}
message ChangePriceResponse { string result = 1; }

service ProductService {
  rpc CreateProduct(CreateProductRequest) returns(CreateProductResponse){};
  rpc ProductsPage(PageRequest) returns(PageResponse){};
  rpc ChangePrice(ChangePriceRequest) returns(ChangePriceResponse){};
}

message NotificationRequest {}
message NotificationResponse { repeated Notification notification = 1; }

service NotificationService {
  rpc NewestNotifications(NotificationRequest) returns(NotificationResponse){};
}